--- a/tester.ui
+++ b/tester.ui
@@ -92,11 +92,7 @@
             </property>
            </column>
           </widget>
-          <widget class="QPlainTextEdit" name="plainTextEdit">
-           <property name="readOnly">
-            <bool>true</bool>
-           </property>
-          </widget>
+          <widget class="QPlainTextEdit" name="plainTextEdit"/>
          </widget>
         </item>
        </layout>
